# omp_utils

./: .gitignore  CMakeLists.txt  LICENSE  TODO.txt  make_loaded_list.h  omp_enumerate.h
examples/: CMakeLists.txt
examples/omp/utils/: common_example.cpp  enumerate_example.cpp  head_example.cpp  in_example.cpp  main.cpp  make_loaded_list_example.cpp  range_example.cpp  reversed_example.cpp  tuple_map_reduce_example.cpp  zip.cpp
include/omp/utils/: base_container_traits.h  common.h  enumerate.h  head.h  in.h  make_loaded_list.h  omp_enumerate.h  omp_in.h  omp_range.h  range.h  reversed.h  tuple_map_reduce.h  zip.h
include/omp_utils/: make_loaded_list.h  omp_in.h  omp_range.h  omp_reversed.h
include/utils/: omp_enumerate.h  omp_in.h
stuff/: todo.md
tests/: CMakeLists.txt  make_loaded_list_tests.cpp  omp_enumerate_tests.cpp  omp_in_tests.cpp  omp_make_loaded_list_tests.cpp  omp_range_tests.cpp  omp_reversed_tests.cpp  test.cpp
tests/omp/utils/: common_tests.cpp  enumerate_tests.cpp  head_tests.cpp  in_tests.cpp  make_loaded_list_tests.cpp  range_tests.cpp  reversed_tests.cpp  tuple_map_reduce_tests.cpp  zip_tests.cpp
